# rew2streammagic

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example_data/: default.txt  filter_types.txt  peaking.txt
examples/: ipv6_demonstration.py
rew2streammagic/: main.py
