[project]
name = "rew2streammagic"
version = "0.1.0"
description = "Apply REW equalizer profiles to StreamMagic device"
authors = [
    {name = "Solmath",email = "33658856+Solmath@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
aiostreammagic = { path = "../aiostreammagic", develop = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.5"
